--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,4 +31,6 @@
             android:screenOrientation="portrait" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
