--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cesare.leagueoflegendscoaching">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -32,5 +32,7 @@
         <activity
             android:name=".Activities.StudentArea"
             android:screenOrientation="portrait" />
+        <activity android:name=".Activities.CoachArea"></activity>
     </application>
+
 </manifest>
