--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         <activity android:name=".Activities.CoachArea" />
         <activity
             android:name=".Activities.SearchCoach"
-            android:label="@string/title_activity_search_coach"></activity>
+            android:label="@string/title_activity_search_coach" />
+        <activity android:name=".Activities.CoachesList"></activity>
     </application>
 
 </manifest>
