--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
             android:name=".Activities.SearchCoach"
             android:label="@string/title_activity_search_coach" />
         <activity android:name=".Activities.CoachesList" />
-        <activity android:name=".Activities.CoachDetails"></activity>
+        <activity android:name=".Activities.CoachDetails" />
+        <activity android:name=".Activities.WeekSchedule"></activity>
     </application>
 
 </manifest>
