--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         <activity android:name=".Activities.CoachesList" />
         <activity android:name=".Activities.CoachDetails" />
         <activity android:name=".Activities.WeekSchedule" />
-        <activity android:name=".Activities.DaySchedule"></activity>
+        <activity android:name=".Activities.DaySchedule" />
     </application>
 
 </manifest>
