--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".Activities.Home"
             android:screenOrientation="portrait">
@@ -40,7 +40,8 @@
         <activity android:name=".Activities.CoachDetails" />
         <activity android:name=".Activities.WeekSchedule" />
         <activity android:name=".Activities.DaySchedule" />
-        <activity android:name=".Activities.CoachReservation"></activity>
+        <activity android:name=".Activities.CoachReservation" />
+        <activity android:name=".Activities.ReservationList"></activity>
     </application>
 
 </manifest>
