--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,8 @@
         <activity android:name=".Activities.CoachReservation" />
         <activity android:name=".Activities.ReservationList" />
         <activity
-            android:name=".Activities.Booking"
-            android:theme="@style/Theme.AppCompat"/>
+            android:name=".Activities.Booking2"
+            android:theme="@style/AppThemeCompat"/>
 
         <activity android:name=".Activities.Fragments.PastReservations" />
         <activity android:name=".Activities.Fragments.ActiveReservations" />
