--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         <activity android:name=".Activities.CoachReservation" />
         <activity android:name=".Activities.ReservationList" />
         <activity
-            android:name=".Activities.Booking2"
+            android:name=".Activities.Booking"
             android:theme="@style/AppThemeCompat"/>
 
         <activity android:name=".Activities.Fragments.PastReservations" />
