--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity
             android:name=".Activities.Appointments"
             android:theme="@style/AppThemeCompat" />
+        <activity android:name=".Activities.UpdateInfo"></activity>
     </application>
 
 </manifest>
