--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,23 @@
             android:name=".Activities.Appointments"
             android:theme="@style/AppThemeCompat" />
         <activity android:name=".Activities.UpdateInfo"></activity>
+
+        <service
+            android:name=".Services.MessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <!-- FirebaseInstanceIdService performs security checks at runtime,
+     no need for explicit permissions despite exported="true"             -->
+        <service android:name=".Services.InstanceIDService" android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+
     </application>
+
 
 </manifest>
